dfir_rs/tests/compile-fail/nightly/surface_singleton_mutation.stderr
error[E0594]: cannot assign to data in a `&` reference
 --> tests/compile-fail/nightly/surface_singleton_mutation.rs:9:17
  |
9 |                 #max_of_stream2 = 999;
  |                 ^^^^^^^^^^^^^^^^^^^^^ cannot assign
